--- a/style.css
+++ b/style.css
@@ -15,3 +15,37 @@
 .disPeq {
     height: 95vh;
 }
+
+.tarjetas {
+    margin-top: 28px;
+    display: flex;
+    justify-content: center;
+}
+
+.tarjetas div {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.tarjeta1 {
+    border: 1px solid blue;
+    box-shadow: 0px 0px 3px blue ;
+}
+
+.tarjeta2 {
+    margin-right: 7px;
+    margin-left: 7px;
+    border: 1px solid green;
+    box-shadow: 0px 0px 3px green ;
+}
+
+.tarjeta3 {
+    border: 1px solid orange;
+    box-shadow: 0px 0px 3px orange;
+}
+
+.text-secondary {
+    font-size: 13px;
+}
