--- a/style.css
+++ b/style.css
@@ -31,14 +31,14 @@
 
 .tarjeta1 {
     border: 1px solid blue;
-    box-shadow: 0px 0px 3px blue ;
+    box-shadow: 0px 0px 3px blue;
 }
 
 .tarjeta2 {
     margin-right: 7px;
     margin-left: 7px;
     border: 1px solid green;
-    box-shadow: 0px 0px 3px green ;
+    box-shadow: 0px 0px 3px green;
 }
 
 .tarjeta3 {
@@ -48,4 +48,14 @@
 
 .text-secondary {
     font-size: 13px;
+}
+
+@media (min-height: 800px) {
+    .footer {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        background-color: rgb(29, 57, 71);
+    }
 }
