--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@
 }
 
 .tarjeta1 {
-    border: 1px solid blue;
-    box-shadow: 0px 0px 3px blue;
+    border: 1px solid rgb(0, 0, 202);
+    box-shadow: 0px 0px 3px rgb(0, 0, 202);
 }
 
 .tarjeta2 {
